day-04/deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-nginx-svc
spec:
  type: ClusterIP
  selector:
    app: sample-nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
